feat: create diferent pages to render landing and app

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,14 @@
   .scrollbar-hide::-webkit-scrollbar {
     display: none;
   }
+
+  .scrollbar {
+    scrollbar-width: inherit;
+    -ms-overflow-style: inherit;
+  }
+  .scrollbar::-webkit-scrollbar {
+    display: inherit;
+  }
 }
 
 
